--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/rest_app_db
-spring.datasource.username=postgres
-spring.datasource.password=79182872449
+spring.datasource.username=
+spring.datasource.password=
 
 spring.jpa.properties.hiberante.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.show_sql=true
